--- a/index.html
+++ b/index.html
@@ -10,6 +10,27 @@
   </header>
   
   <main role="main">
+    <form id="login-form" method="post" action="#" accept-charset="UTF-8">
+      <fieldset>
+
+        <legend>Please Sign in</legend>
+
+        <div>
+          <label for="user_email">Email</label>
+          <input type="text" id="user_email" name="user[email]" placeholder="Email Address">
+        </div>
+
+        <div>
+          <label for="user_password">Password</label>
+          <input type="password" id="user_password" name="user[password]" placeholder="Password">
+        </div>
+
+        <div>
+          <input type="submit" value="Sign In">
+        </div>
+        
+      </fieldset>
+    </form>
   </main>
 
   <footer>
