--- a/index.html
+++ b/index.html
@@ -28,12 +28,18 @@
         <div>
           <input type="submit" value="Sign In">
         </div>
-        
+
       </fieldset>
     </form>
   </main>
 
   <footer>
+    <p>
+      <a href="/privacy">Privacy Policy</a> &bull;
+      <a href="/terms">Terms of Use</a> &bull;
+      &copy; 2014 Mood Mixer
+    </p>
   </footer>
+  
 </body>
 </html>
