--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Mood Mixer</title>
+  <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" media="all">
 </head>
 <body>
   <header role="banner">
@@ -40,6 +41,6 @@
       &copy; 2014 Mood Mixer
     </p>
   </footer>
-  
+
 </body>
 </html>
